exports[`Loading component should be displayed with --no-margin class if noMargin is true 1`] = `
<div
  className="pho-loading--no-margin" />
`;

exports[`Loading component should be displayed with photos_fetching text if loadingType is photos_fetching 1`] = `
<div
  className="pho-loading">
  <p>
    Loading
  </p>
</div>
`;

exports[`Loading component should be displayed with photos_indexing text if loadingType is photos_indexing 1`] = `
<div
  className="pho-loading">
  <p>
    Your photos are currently being indexed. Please wait.
  </p>
</div>
`;

exports[`Loading component should be displayed with photos_upload text if loadingType is photos_upload 1`] = `
<div
  className="pho-loading">
  <p>
    Uploading
  </p>
</div>
`;
